--- a/infrastructure/slackbot_demo.yml
+++ b/infrastructure/slackbot_demo.yml
@@ -5,10 +5,6 @@ Parameters:
     Type: String
     Default: slackbot-gateway
     Description: The name of the api gateway
-  ApiGatewayRootMethod:
-    Type: String
-    Default: POST
-    Description: The root method for the api gateway (Example - POST - GET)
   App:
     Type: String
     Default: Slackbot
@@ -38,6 +34,9 @@ Resources:
     Type: AWS::ApiGateway::RestApi
     Properties:
       Description: The rest api gateway that will trigger the lambda function
+      EndpointConfiguration:
+        Types:
+          - REGIONAL
       Name: !Sub ${Env}-${ApiGatewayName}-${Region}
       Tags:
         - Key: "App"
@@ -49,18 +48,24 @@ Resources:
     Properties:
       RestApiId: !Ref SlackbotGateway
       StageName: !Sub ${Env}
+  SlackbotGatewayResource:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      ParentId: !GetAtt SlackbotGateway.RootResourceId
+      PathPart: !Sub ${App}
+      RestApiId: !Ref SlackbotGateway
   SlackbotGatewayRootMethod:
     Type: AWS::ApiGateway::Method
     Properties:
       AuthorizationType: NONE
-      HttpMethod: !Sub ${ApiGatewayRootMethod}
+      HttpMethod: ANY
       Integration:
         IntegrationHttpMethod: POST
         Type: AWS_PROXY
         Uri: !Sub
           - arn:aws:apigateway:${Region}:lambda:path/2015-03-31/functions/${LambdaArn}/invocations 
           - LambdaArn: !GetAtt SlackbotFunction.Arn
-      ResourceId: !GetAtt SlackbotGateway.RootResourceId
+      ResourceId: !GetAtt SlackbotGatewayResource.ResourceId
       RestApiId: !Ref SlackbotGateway
   SlackbotFunction:
     Type: AWS::Lambda::Function
@@ -72,9 +77,9 @@ Resources:
           import json
 
           def lambda_handler(event, context):
-            print("Hello world!")
             return {
-              'statusCode': 200
+              'statusCode': 200,
+              'body': json.dumps('Hello world from Lambda!')
             }
       FunctionName: !Sub ${Env}-${LambdaFuncName}-${Region}
       Handler: !Sub index.lambda_handler
@@ -135,4 +140,4 @@ Resources:
       Action: lambda:InvokeFunction
       FunctionName: !GetAtt SlackbotFunction.Arn
       Principal: apigateway.amazonaws.com
-      SourceArn: !Sub arn:aws:execute-api:${Region}:${AWS::AccountId}:${SlackbotGateway}/${Env}/${ApiGatewayRootMethod}/
+      SourceArn: !Sub arn:aws:execute-api:${Region}:${AWS::AccountId}:${SlackbotGateway}/*/*
