--- a/infrastructure/slackbot_demo.yml
+++ b/infrastructure/slackbot_demo.yml
@@ -46,7 +46,7 @@ Resources:
               "Effect": "Allow",
               "Principal": "*",
               "Action": "execute-api:Invoke",
-              "Resource": !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:*/*",
+              "Resource": !Sub "execute-api:${AWS::Region}:${AWS::AccountId}:*/*",
               "Condition": {
                 "IpAddress": {
                   "aws:SourceIp": !Sub "${AllowedIpAddressRange}"
@@ -61,7 +61,7 @@ Resources:
   SlackbotGatewayDeployment:
     Type: AWS::ApiGateway::Deployment
     DependsOn: SlackbotGatewayRootMethod
-    Description: The deployment of the api gateway
+    Description: The deployment of the api gateway.
     Properties:
       RestApiId: !Ref SlackbotGateway
       StageName: !Sub ${Env}
