--- a/infrastructure/slackbot_demo.yml
+++ b/infrastructure/slackbot_demo.yml
@@ -1,4 +1,3 @@
-
 AWSTemplateFormatVersion: "2010-09-09"
 Description: A template that stands up a slackbot lambda function.
 Parameters:
@@ -46,7 +45,7 @@ Resources:
               "Effect": "Allow",
               "Principal": "*",
               "Action": "execute-api:Invoke",
-              "Resource": !Sub "execute-api:${AWS::Region}:${AWS::AccountId}:*/*",
+              "Resource": !Sub "*execute-api:${AWS::Region}:${AWS::AccountId}:*/*",
               "Condition": {
                 "IpAddress": {
                   "aws:SourceIp": !Sub "${AllowedIpAddressRange}"
@@ -61,7 +60,6 @@ Resources:
   SlackbotGatewayDeployment:
     Type: AWS::ApiGateway::Deployment
     DependsOn: SlackbotGatewayRootMethod
-    Description: The deployment of the api gateway.
     Properties:
       RestApiId: !Ref SlackbotGateway
       StageName: !Sub ${Env}
@@ -99,11 +97,11 @@ Resources:
               'body': json.dumps('Hello world from Lambda!')
             }
       FunctionName: !Sub ${Env}-${LambdaFuncName}-${AWS::Region}
-      Handler: !Sub index.lambda_handler
+      Handler: index.lambda_handler
       MemorySize: 128
       PackageType: Zip
       Role: !GetAtt SlackbotFunctionRole.Arn
-      Runtime: python3.10
+      Runtime: python3.9
       Tags:
         - Key: "App"
           Value: !Sub ${App}      
@@ -117,7 +115,6 @@ Resources:
           Value: !Sub ${App}      
   SlackbotFunctionRole:
     Type: AWS::IAM::Role
-    DependsOn: SlackbotFunctionRolePolicy
     Properties:
       Description: The iam role that will be used to execute the lambda function
       AssumeRolePolicyDocument: 
