--- a/infrastructure/slackbot_demo.yml
+++ b/infrastructure/slackbot_demo.yml
@@ -77,9 +77,16 @@ Resources:
       Integration:
         IntegrationHttpMethod: POST
         Type: AWS_PROXY
-        Uri: !Sub
-          - arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${LambdaArn}/invocations 
-          - LambdaArn: !GetAtt SlackbotFunction.Arn
+        Uri: 
+          Fn::Join:
+            - ''
+            - - 'arn:'
+              - !Ref AWS::Partition
+              - ':apigateway:'
+              - !Ref AWS::Region
+              - ':lambda:path/2015-03-31/functions/'
+              - !GetAtt SlackbotFunction.Arn
+              - '/invocations'
       ResourceId: !GetAtt SlackbotGatewayResource.ResourceId
       RestApiId: !Ref SlackbotGateway
   SlackbotFunction:
@@ -107,6 +114,7 @@ Resources:
           Value: !Sub ${App}      
   SlackbotFunctionLogs:
     Type: AWS::Logs::LogGroup
+    DeletionPolicy: Delete
     Properties:
       LogGroupName: !Sub /aws/lambda/${Env}-${LambdaFuncName}-${AWS::Region}
       Tags:
@@ -154,4 +162,16 @@ Resources:
       Action: lambda:InvokeFunction
       FunctionName: !GetAtt SlackbotFunction.Arn
       Principal: apigateway.amazonaws.com
-      SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${SlackbotGateway}/*/*
+      SourceArn: #!Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${SlackbotGateway}/*/*
+        Fn::Join:
+          - ''
+          - - 'arn:'
+            - !Ref AWS::Partition
+            - ':execute-api:'
+            - !Ref AWS::Region
+            - ':'
+            - !Ref AWS::AccountId
+            - ':'
+            - !Ref SlackbotGateway
+            - '/*'
+            - '/*'
