--- a/infrastructure/slackbot_demo.yml
+++ b/infrastructure/slackbot_demo.yml
@@ -165,13 +165,10 @@ Resources:
       Principal: apigateway.amazonaws.com
       SourceArn: #!Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${SlackbotGateway}/*/*
         Fn::Join:
-          - ''
-          - - 'arn:'
+          - ':'
+          - - 'arn'
             - !Ref AWS::Partition
-            - ':execute-api:'
+            - 'execute-api'
             - !Ref AWS::Region
             - !Ref AWS::AccountId
-            - ':'
-            - !Ref SlackbotGateway
-            - '/*'
-            - '/*'
+            - !Sub '${SlackbotGateway}/*/*'
