--- a/infrastructure/slackbot_demo.yml
+++ b/infrastructure/slackbot_demo.yml
@@ -1,4 +1,5 @@
-AWSTemplateFormatVersion: "2010-09-09" 
+---
+AWSTemplateFormatVersion: "2010-09-09"\n
 Description: A template that stands up a slackbot lambda function.
 Parameters:
   AllowedIpAddressRange:
