Troubleshooting linter issue

--- a/infrastructure/slackbot_demo.yml
+++ b/infrastructure/slackbot_demo.yml
@@ -1,5 +1,5 @@
 ---
-AWSTemplateFormatVersion: "2010-09-09"\r
+AWSTemplateFormatVersion: 2010-09-09
 Description: A template that stands up a slackbot lambda function.
 Parameters:
   AllowedIpAddressRange:
